--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:background="@drawable/item_color_accent_border_ripple_background"
-        >
+        android:background="@drawable/item_color_accent_border_ripple_background">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,7 +32,6 @@
             android:textColor="@color/colorPrimary"
             android:textSize="@dimen/default_button_text_size"
             android:textStyle="bold"
-
             />
 
     </FrameLayout>
